Please send gnubiff bug reports to gnubiff-bugs@lists.sourceforge.net

Version 2.2.3
 * Robert Sowada
   - Changed version to 2.2.3
   - Bugfix: Encrypting passwords that are longer than 16 characters (debian
        bug #378233; thanks to Julio Mendoza for reporting this bug)
   - Bugfix: Encrypting passwords that have a length of 16, 32, 48 etc.
   - Bugfix: Code fixes to avoid gcc warnings
	
Version 2.2.2           2006-08-06 18:47
 * Robert Sowada
   - Changed version to 2.2.2
   - Bugfix: Obtaining the panel's size (GNOME)
   - Updated Hungarian translation (thanks to Wallner Adam)
   - Updated Vietnamese translation (thanks to Clytie Siddall)
   - Feature: Three new options for filtering messages via regular expressions
        (feature request #1493670 by sunyata and others)
   - Cleanup: Substituted static mutex for popup by regular mutex
   - Cleanup: Added test for header file "regex.h" in "configure.ac"
   - Bugfix: Status of multipart messages (thanks to Chris Kemp for reporting
        and fixing this bug; bug was reported as #1514879 before by mtorroja)
   - Added Chris Kemp to contributors
   - Updated German Translation

Version 2.2.1		2006-05-14 20:08
 * Robert Sowada
   - Changed version to 2.2.1
   - Bugfix: Version check of gtk in configure.ac (thanks to Andy Schofield for
        reporting this bug)
   - Added Andy Schofield to contributors
   - Bugfix: False GPL version in "doc/gnubiff.texi"
   - Added GPL (version 2) as ASCII text file to the gnubiff directory
   - Cleanup: All FAM functions in "src/local.cc" now have the prefix "fam_"
   - Cleanup: It should be possible now to compile the code without FAM support
   - Feature: Configuring gnubiff without support for FAM (feature request
        #1461632 by Kyle McDonald and others)
   - Updated Vietnamese translation (thanks to Clytie Siddall)
   - Feature: New option "startup_preferences"
	
Version 2.2.0           2006-04-09 17:44
 * Robert Sowada