@@ -12,6 +12,7 @@ Version 2.2.3
         bug #378233; thanks to Julio Mendoza for reporting this bug)
    - Bugfix: Encrypting passwords that have a length of 16, 32, 48 etc.
    - Bugfix: Code fixes to avoid gcc warnings
+   - Bugfix: Ignore SIGPIPE signal for using SSL properly
 	
 Version 2.2.2           2006-08-06 18:47
  * Robert Sowada
